libgfortran/intrinsics/c99_functions.c
@@ -491,8 +491,10 @@ nextafterf(float x, float y)
 #endif
 
 
+#if !defined(HAVE_POWF) || defined(HAVE_BROKEN_POWF)
 #ifndef HAVE_POWF
 #define HAVE_POWF 1
+#endif
 float
 powf(float x, float y)
 {
